HBnB, web static, information detail about the places

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -50,12 +50,99 @@
         <h1>Places</h1>
         <article>
           <h2>My home</h2>
+          <div class="price_by_night">$80</div>
+          <div class="information">
+            <div class="guestlogo"></div>
+            <div class="max_guest">
+              <div class="max_guest_logo"></div>
+              2 Guests
+            </div>
+            <div class="number_rooms">
+              <div class="number_rooms_logo"></div>
+              1 Bedroom
+            </div>
+            <div class="number_bathrooms">
+              <div class="number_bathrooms_logo"></div>
+              1 Bathroom
+            </div>
+          </div>
+          <div class="user">
+            <p><b>Owner: </b>John Lennon</p>
+          </div>
+          <div class="description">
+            <p>
+              This is a lovely I and I bathroom apartment that can accommodate 2
+              people, It bcates at the center of Shmghai and next to subway line
+              I , I stop to Square, 2 stops to Bund, 3 stops to Jingan Temple.
+            </p>
+          </div>
         </article>
         <article>
           <h2>Tiny house</h2>
+          <div class="price_by_night">$65</div>
+          <div class="information">
+            <div class="max_guest">
+              <div class="max_guest_logo"></div>
+              4 Guests
+            </div>
+            <div class="number_rooms">
+              <div class="number_rooms_logo"></div>
+              2 Bedroom
+            </div>
+            <div class="number_bathrooms">
+              <div class="number_bathrooms_logo"></div>
+              1 Bathroom
+            </div>
+          </div>
+          <div class="user">
+            <p><b>Owner: </b>Adrienne</p>
+          </div>
+          <div class="description">
+            <p>
+              Our place is a private, affordable Stand-alone ginst house
+              centrally located just minutes to French Quarters, downtown, the
+              Fair Grounds(Jazz Fest) and City Park. The guest house is a
+              quaint, 4m square ft. with a full bath, mini kitch«l, & living
+              room. The extra high ceilings make the home feel more spacious.
+              The sofa converts to a also. We have a hand made counter area that
+              adds character to the room md a great porch/deck to relax on and
+              have a glass of Merlot.
+            </p>
+          </div>
         </article>
         <article>
           <h2>A suite</h2>
+          <div class="price_by_night">$1000</div>
+          <div class="information">
+            <div class="guestlogo"></div>
+            <div class="max_guest">
+              <div class="max_guest_logo"></div>
+              1 Guests
+            </div>
+            <div class="number_rooms">
+              <div class="number_rooms_logo"></div>
+              1 Bedroom
+            </div>
+            <div class="number_bathrooms">
+              <div class="number_bathrooms_logo"></div>
+              1 Bathroom
+            </div>
+          </div>
+          <div class="user">
+            <p><b>Owner: </b>Doom slayer</p>
+          </div>
+          <div class="description">
+            <p>
+              The Fortress of Doom is a space station used by the Doom Slayer as
+              his personal headquarters. It was designed by the people of Argent
+              D'Nur but built around a core of Maykr technology, originally
+              intended as a base of operations for the Night Sentinels: it is
+              implied to be one of many such structures, though the fate of the
+              others is unknown. VEGA describes it as a "flag-station," implying
+              it is a particularly large or well-equipped example of a Sentinel
+              warship
+            </p>
+          </div>
         </article>
       </section>
     </div>
